# space

./: .gitignore  CMakeLists.txt  run.sh
include/: space.hpp
src/: fname.hpp  main.cpp  space.cpp
